# version-aware-documentation-assistant

./: .gitignore  DECISIONS.md  README.md  count_py_bytes.ps1  pyproject.toml
docs/: corpus-map.md  migration-note.md  migration-notes-concise.md
docs/directory-trees/: pyV1.md  pyV2.md
docs/verification/: verification-results.txt  verify-migration-notes.ps1
eval/: golden.jsonl  run.py
eval/configs/: phase1_baseline.json
eval/explained/: golden_set_documentation.md  harness_design.md
eval/results/: phase1_baseline.csv  phase1_baseline_summary.csv
observation_failure/phase 1/: F1.md  F2.md  F3.md  F4.md  F5.md
src/: answer.py  config.py  ingestion.py  retrieve.py  schema.py
