[project]
name = "version-aware-document-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langfuse>=4.13.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "tiktoken>=0.13.0",
]
